// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render NewBlog(mode: editing) component correctly 1`] = `
<DocumentFragment>
  <div
    class="content-container"
  >
    <form
      class="blog-edit-form"
      data-testid="form"
    >
      <div
        class="blog-form__lab-inp"
      >
        <div>
          <label
            for="title_new"
          >
            Title:
          </label>
        </div>
        <div>
          <textarea
            class="title-input"
            data-testid="title_input"
            id="title_new"
            maxlength="120"
            placeholder="Title (More than 90 characters)"
          >
            title2
          </textarea>
        </div>
      </div>
      <div
        class="blog-form__lab-inp"
      >
        <div>
          <label
            for="description_new"
          >
            Description:
          </label>
        </div>
        <div>
          <textarea
            class="description-input"
            data-testid="description_input"
            id="description_new"
            maxlength="300"
            placeholder="Description (More than 255 characters)"
          >
            description
          </textarea>
        </div>
      </div>
      <div
        class="blog-form__lab-inp"
      >
        <div>
          <label
            for="content_new"
          >
            Content:
          </label>
        </div>
        <div>
          <textarea
            class="content-input"
            data-testid="content_input"
            id="content_new"
            placeholder="Content (More than 500 characters)"
          >
            content
          </textarea>
        </div>
      </div>
      <div
        class="blog-form__lab-inp"
      >
        <div>
          <label
            for="category_new"
          >
            Category:
          </label>
        </div>
        <div>
          <select
            class="category-selector"
            data-testid="category_select"
            id="category_new"
          >
            <option
              disabled=""
              selected=""
              value="Django"
            >
              Django
            </option>
            <option
              value="Web"
            >
              Web
            </option>
            <option
              value="Programming"
            >
              Programming
            </option>
            <option
              value="React"
            >
              React
            </option>
          </select>
        </div>
      </div>
      <div
        class="blog-form__button"
      >
        <button
          data-testid="edit_create_button"
        >
          Edit Blog
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Should render NewBlog(mode: new blog) component correctly 1`] = `
<DocumentFragment>
  <div
    class="content-container"
  >
    <form
      class="blog-new-form"
      data-testid="form"
    >
      <div
        class="blog-form__lab-inp"
      >
        <div>
          <label
            for="title_new"
          >
            Title:
          </label>
        </div>
        <div>
          <textarea
            class="title-input"
            data-testid="title_input"
            id="title_new"
            maxlength="120"
            placeholder="Title (More than 90 characters)"
          />
        </div>
      </div>
      <div
        class="blog-form__lab-inp"
      >
        <div>
          <label
            for="description_new"
          >
            Description:
          </label>
        </div>
        <div>
          <textarea
            class="description-input"
            data-testid="description_input"
            id="description_new"
            maxlength="300"
            placeholder="Description (More than 255 characters)"
          />
        </div>
      </div>
      <div
        class="blog-form__lab-inp"
      >
        <div>
          <label
            for="content_new"
          >
            Content:
          </label>
        </div>
        <div>
          <textarea
            class="content-input"
            data-testid="content_input"
            id="content_new"
            placeholder="Content (More than 500 characters)"
          />
        </div>
      </div>
      <div
        class="blog-form__lab-inp"
      >
        <div>
          <label
            for="category_new"
          >
            Category:
          </label>
        </div>
        <div>
          <select
            class="category-selector"
            data-testid="category_select"
            id="category_new"
          >
            <option
              disabled=""
              selected=""
              value=""
            >
              --Select Category--
            </option>
            <option
              value="Web"
            >
              Web
            </option>
            <option
              value="Programming"
            >
              Programming
            </option>
            <option
              value="React"
            >
              React
            </option>
          </select>
        </div>
      </div>
      <div
        class="blog-form__button"
      >
        <button
          data-testid="edit_create_button"
        >
          Create Blog
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
